k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: cloud-l3-project
          image: AWS_ECR_URI
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
